<resources>
    <string name="app_name">جلسات آنلاین </string>
    <string name="title">کریسمس در چین</string>
    <string name="date">2018-07-07T17:57:40</string>
    <string name="author">سنا عبادی</string>
    <string name="app_title">جلسات آنلاین</string>
    <string name="item1">آیتم تست </string>
    <string name="item2">آیتم تست </string>
    <string name="item3">آیتم تست  </string>
    <string name="item4">آیتم تست </string>
    <string name="item5">آیتم تست  </string>
    <string name="share">اشتراک گذاری </string>

    <!-- Network -->
    <string name="you_are_offline">خطا در اتصال به اینترنت !</string>
    <string name="network_setting">بررسی تنظیمات شبکه</string>
    <string name="try_again">تلاش دوباره</string>


    <string name="about_author">ن دانشجو مهندسی صنایع هستم ولی علاقمند به  فعالیت در زمینه ی IT  هستم و در حال حاظر مشغول  برنامه  نویسی اندرویدم:)</string>

    <string name="content">یران یکی از قدیمی ترین تمدن هاست و شگفتی ها و منابع زیادی را در دل خود جای داده است .
یکی از این شگفتی ها که باعث توجه بسیاری از گردشگران  شده  روستای کندوان است  که برخی از باستان شناسان قدمت ان را سه هزار سال تخمین زده اند. یعنی پیش از ورود اسلام    .

این روستا در هجده کیلومتری جنوب اسکو در دامنه های سلطان داغی و کوه های سهند در شصت و دو کیلومتری جنوب غربی تبریز قرار دارد و یکی از نکات شگفت انگیز درباره ی خانه های این روستا این است که بر اثر فعل وانفعالات اتش فشانی بوجود امده اند و طبق تحقیقات تاریخی زمانی که مغول ها در قرن هفتم به ایران حمله کرد برخی از مردم روستای حیله ور که در نزدیکی این روستا بوده است به این مکان فرار میکنند و در این خانه ها پنهان میشوند و به همین علت است که اسم این روستا کندوان است زیرا ان ها برای ساخت این خانه ها سنگ ها را کنده و انهارا بصورت خانه در میاوردند بدون استفاده از هیچ مصالح دیگری مانند اجر ویا غیره

نکته ی قابل توجه دیگر درباره ی این روستا کمیاب بودن ان است زیرا از این نوع یعنی روستاهای صخره ای تنها سه روستا در جهان وجود دارد یکی روستای پکاپادویکای در ترکیه و دیگریداکوتا در امریکاست اما روستای کندوان تنها مکان صخره ای در جهان است که هنوز زندگی در ان جریان دارد طبق امار سرشماری که در سال 1375 گرفته شد 137 خانواده که شامل750 فرد میشوند در این خانه ها زندگی میکنند که به شغل های دامداری کشاورزی و صنایع دستی مشغول اند</string>

</resources>
