<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bg_card_view"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/title_margin"
                android:padding="@dimen/title_padding"
                android:textColor="@color/colorTitle"
                android:textSize="18sp"
                tools:text="@string/title"/>


            <RelativeLayout
                android:id="@+id/author_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:gravity="center|end">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/img_author_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/title_padding"
                    android:padding="@dimen/title_padding"
                    android:scaleType="centerCrop"
                    app:civ_border_color="@color/colorTitle"
                    app:civ_border_width="2dp"
                    tools:src="@drawable/ic_launcher_background"/>

                <TextView
                    android:id="@+id/txt_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/img_author_profile"
                    android:padding="@dimen/title_padding"
                    android:textColor="@color/colorDate"
                    android:textSize="15sp"
                    tools:text="@string/author"/>

            </RelativeLayout>


            <ImageView
                android:id="@+id/img_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_title"
                android:layout_marginTop="20dp"
                android:padding="@dimen/title_padding"
                android:tint="@android:color/darker_gray"
                android:src="@drawable/ic_more_vert_black_24dp"/>

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/author_lay"
                android:layout_marginBottom="@dimen/title_padding"
                android:layout_marginEnd="@dimen/title_margin"
                android:layout_marginTop="@dimen/title_margin"
                android:textColor="@color/colorDate"
                android:textSize="15sp"
                tools:text="@string/date"/>

            <ImageView
                android:id="@+id/img_post"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/txt_date"
                android:layout_marginTop="@dimen/title_padding"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_post"
                android:layout_margin="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="@dimen/title_padding"
                android:textColor="#131212"
                android:textSize="13sp"
                tools:text="@string/content"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>